--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,7 +80,6 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="ZoomCamIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="ZoomCamOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
@@ -99,4 +98,16 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
+
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
+UserSettingsClass=/Script/EnhancedInput.EnhancedInputUserSettings
+DefaultPlayerMappableKeyProfileClass=/Script/EnhancedInput.EnhancedPlayerMappableKeyProfile
+DefaultWorldInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+bSendTriggeredEventsWhenInputIsFlushed=True
+bEnableUserSettings=False
+EnhancedInput.EnableDefaultMappingContexts=True
+EnhancedInput.OnlyTriggerLastActionInChord=True
+bLogOnDeprecatedConfigUsed=True
+bEnableWorldSubsystem=False
+EnhancedInput.bShouldLogAllWorldSubsystemInputs=False
 
